<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@android:color/holo_green_dark"
        android:gravity="center"
        android:text="@string/text1"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@android:color/holo_blue_dark"
        android:gravity="center"
        android:text="@string/text2"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintStart_toEndOf="@id/text1"
        app:layout_constraintTop_toBottomOf="@id/text1" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@android:color/holo_orange_dark"
        android:gravity="center"
        android:text="@string/text3"
        android:textColor="@color/white"
        android:textSize="48sp" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@android:color/holo_red_dark"
        android:gravity="center"
        android:text="@string/text4"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="@id/text385"
        app:layout_constraintStart_toEndOf="@id/text385"
        app:layout_constraintTop_toTopOf="@id/text385" />

    <TextView
        android:id="@+id/text5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@android:color/holo_purple"
        android:gravity="center"
        android:text="@string/text5"
        android:textColor="@color/white"
        android:textSize="48sp" />

    <TextView
        android:id="@+id/text6"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@android:color/holo_blue_light"
        android:gravity="center"
        android:text="@string/text6"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintEnd_toStartOf="@id/text385"
        app:layout_constraintTop_toBottomOf="@id/text385" />

    <TextView
        android:id="@+id/text7"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:text="@string/text7"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text6" />

    <TextView
        android:id="@+id/text8"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@android:color/black"
        android:gravity="center"
        android:text="@string/text8"
        android:textColor="@color/white"
        android:textSize="48sp" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/text385"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:constraint_referenced_ids="text3,text8,text5"
        app:layout_constraintStart_toEndOf="@id/text2"
        app:layout_constraintTop_toBottomOf="@id/text2" />

</androidx.constraintlayout.widget.ConstraintLayout>