<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/phone_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/text_phone_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image"
        app:layout_constraintVertical_bias=".1" />

    <EditText
        android:id="@+id/phone_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@android:color/darker_gray"
        android:hint="@string/text_phone_number"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:paddingHorizontal="8dp"
        android:paddingVertical="16dp"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@id/phone_title"
        app:layout_constraintStart_toStartOf="@id/phone_title"
        app:layout_constraintTop_toBottomOf="@id/phone_title" />

    <TextView
        android:id="@+id/password_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_password"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/phone_title"
        app:layout_constraintStart_toStartOf="@id/phone_title"
        app:layout_constraintTop_toBottomOf="@id/phone_input" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@android:color/darker_gray"
        android:hint="@string/text_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingHorizontal="8dp"
        android:paddingVertical="12dp"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@id/phone_title"
        app:layout_constraintStart_toStartOf="@id/phone_title"
        app:layout_constraintTop_toBottomOf="@id/password_title" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".15" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/text_login"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/phone_title"
        app:layout_constraintStart_toStartOf="@id/phone_title"
        app:layout_constraintTop_toBottomOf="@id/password_input" />
</androidx.constraintlayout.widget.ConstraintLayout>