<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/phone_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/phone_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_phone_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/phone_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@android:color/darker_gray"
            android:hint="@string/text_phone_number"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:paddingHorizontal="8dp"
            android:paddingVertical="16dp"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_password"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@android:color/darker_gray"
            android:hint="@string/text_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingHorizontal="8dp"
            android:paddingVertical="12dp"
            android:textSize="22sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/text_login"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/form"
        app:layout_constraintStart_toStartOf="@id/form"
        app:layout_constraintTop_toBottomOf="@id/form" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:constraint_referenced_ids="phone_layout,password_layout"
        app:flow_verticalGap="16dp"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>